* Possibly fixing the problems with Edit Mode, by fixing a previous refactoring that switched two variables up. (veqryn)
* Possibly fixing the problems with Edit Mode, by abstracting BasePersistentDelegate and separating EditDelegate from BaseDelegate. (veqryn)


git-svn-id: https://svn.code.sf.net/p/triplea/code/trunk/triplea@3575 a4c711aa-641f-0410-879d-9b464e52b682